     dat.bornmann2007, dat.cannon2006, dat.cohen1981, dat.craft2003,
     dat.crede2010, dat.dagostino1998, dat.damico2009, dat.dorn2007,
     dat.hahn2001, dat.kalaian1996, dat.kearon1998, dat.knapp2017,
     dat.landenberger2005, dat.lau1992, dat.lim2014, dat.lopez2019,
     dat.maire2019, dat.moura2021, dat.obrien2003, dat.vanhowe1999,
     dat.viechtbauer2021)

   o refactored various functions (for cleaner/simpler code)

   o improved the documentation a bit


Changes in Version 2.4-0 (2020-03-19)
=====================================

   o version jump to 2.4-0 for CRAN release (from now on, even minor numbers
     for CRAN releases, odd numbers for development versions)

   o the various forest() functions gain 'header' argument

   o escalc() gains 'include' argument

   o setting 'verbose=3' in model fitting functions sets 'options(warn=1)'

   o forest.rma() and forest.default() now throw informative errors when
     misusing 'order' and 'subset' arguments

   o plot.profile.rma() now always includes the actual value of the variance
     or correlation component as an additional point in the plot

   o fixed failing tests due to the 'stringsAsFactors=FALSE' change in the
     upcoming version of R

   o print.infl.rma.uni() gains 'infonly' argument, to only show the
     influential studies

   o removed 'MASS' from 'Suggests' (no longer needed)

   o argument 'btt' can now also take a string to grep for

   o added 'optimParallel' as possible optimizer in rma.mv()

   o added (for now undocumented) option to fit models in rma.glmm() via the
     'GLMMadaptive' package (instead of 'lme4'); to try this, use:
     'control=list(package="GLMMadaptive")'

   o started to use numbering scheme for devel version (the number after the
     dash indicates the devel version)

   o added contrmat() function (for creating a matrix that indicates which
     groups have been compared against each other in each row of a dataset)
