@@ -215,6 +215,7 @@
 <li><p><code><a href="../reference/simulate.rma.html">simulate.rma()</a></code> gains <code>olim</code> argument; renamed the <code>clim</code> argument in <code><a href="../reference/print.escalc.html">summary.escalc()</a></code> and the various <code><a href="../reference/forest.html">forest()</a></code> functions to <code>olim</code> for consistency (the old <code>clim</code> argument should continue to work)</p></li>
 <li><p>show nicer network graphs for <code>dat.hasselblad1998</code> and <code>dat.senn2013</code> in the help files</p></li>
 <li><p>added 24 datasets (<code>dat.anand1999</code>, <code>dat.assink2016</code>, <code>dat.baskerville2012</code>, <code>dat.bornmann2007</code>, <code>dat.cannon2006</code>, <code>dat.cohen1981</code>, <code>dat.craft2003</code>, <code>dat.crede2010</code>, <code>dat.dagostino1998</code>, <code>dat.damico2009</code>, <code>dat.dorn2007</code>, <code>dat.hahn2001</code>, <code>dat.kalaian1996</code>, <code>dat.kearon1998</code>, <code>dat.knapp2017</code>, <code>dat.landenberger2005</code>, <code>dat.lau1992</code>, <code>dat.lim2014</code>, <code>dat.lopez2019</code>, <code>dat.maire2019,</code>, <code>dat.moura2021</code> <code>dat.obrien2003</code>, <code>dat.vanhowe1999</code>, <code>dat.viechtbauer2021</code>)</p></li>
+<li><p>the package now runs a version check on startup in interactive sessions; setting the environment variable <code>METAFOR_VERSION_CHECK</code> to <code>FALSE</code> disables this</p></li>
 <li><p>refactored various functions (for cleaner/simpler code)</p></li>
 <li><p>improved the documentation a bit</p></li>
 </ul>
