@@ -3,5 +3,5 @@ pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   pkgdown/diagram: diagram.html
-last_built: 2021-06-02T07:20Z
+last_built: 2021-06-02T07:35Z
 
