@@ -224,12 +224,12 @@
 <span class='va'>res</span> <span class='op'>&lt;-</span> <span class='fu'><a href='rma.uni.html'>rma</a></span><span class='op'>(</span><span class='va'>yi</span>, <span class='va'>vi</span>, mods <span class='op'>=</span> <span class='op'>~</span> <span class='va'>ablat</span> <span class='op'>+</span> <span class='va'>alloc</span>, data<span class='op'>=</span><span class='va'>dat</span><span class='op'>)</span>
 <span class='fu'>formula</span><span class='op'>(</span><span class='va'>res</span>, type<span class='op'>=</span><span class='st'>"mods"</span><span class='op'>)</span>
 </div><div class='output co'>#&gt; ~ablat + alloc
-#&gt; &lt;environment: 0x556ed30d7058&gt;</div><div class='input'>
+#&gt; &lt;environment: 0x55daecaf6700&gt;</div><div class='input'>
 <span class='co'>### specify moderators via 'yi' argument</span>
 <span class='va'>res</span> <span class='op'>&lt;-</span> <span class='fu'><a href='rma.uni.html'>rma</a></span><span class='op'>(</span><span class='va'>yi</span> <span class='op'>~</span> <span class='va'>ablat</span> <span class='op'>+</span> <span class='va'>alloc</span>, <span class='va'>vi</span>, data<span class='op'>=</span><span class='va'>dat</span><span class='op'>)</span>
 <span class='fu'>formula</span><span class='op'>(</span><span class='va'>res</span>, type<span class='op'>=</span><span class='st'>"yi"</span><span class='op'>)</span>
 </div><div class='output co'>#&gt; yi ~ ablat + alloc
-#&gt; &lt;environment: 0x556ecec56758&gt;</div></pre>
+#&gt; &lt;environment: 0x55dae97d1a78&gt;</div></pre>
   </div>
   <div class="col-md-3 hidden-xs hidden-sm" id="pkgdown-sidebar">
     <nav id="toc" data-toggle="toc" class="sticky-top">
