@@ -321,6 +321,10 @@
 #&gt;     dat.lim2014, dat.lopez2019, dat.maire2019, , dat.moura2021
 #&gt;     dat.obrien2003, dat.vanhowe1999, dat.viechtbauer2021)
 #&gt; 
+#&gt;   - the package now runs a version check on startup in interactive
+#&gt;     sessions; setting the environment variable METAFOR_VERSION_CHECK to
+#&gt;     FALSE disables this
+#&gt; 
 #&gt;   - refactored various functions (for cleaner/simpler code)
 #&gt; 
 #&gt;   - improved the documentation a bit
