@@ -273,7 +273,7 @@
 <span class='co'>### generate pdf report</span>
 <span class='fu'>reporter</span><span class='op'>(</span><span class='va'>res</span><span class='op'>)</span><span class='co'># }</span>
 </div><div class='output co'>#&gt; <span class='message'></span>
-#&gt; <span class='message'>Directory for generating the report is: /tmp/Rtmp9MewNO</span></div><div class='output co'>#&gt; <span class='message'>Copying references.bib and apa.csl to report directory ...</span></div><div class='output co'>#&gt; <span class='message'>Saving model object to report_res.rdata ...</span></div><div class='output co'>#&gt; <span class='message'>Creating report_res.rmd file ...</span></div><div class='output co'>#&gt; <span class='message'>Rendering report_res.rmd file ...</span></div><div class='output co'>#&gt; <span class='message'>Generated /tmp/Rtmp9MewNO/report_res.html ...</span></div><div class='output co'>#&gt; <span class='message'>Opening report ...</span></div></pre>
+#&gt; <span class='message'>Directory for generating the report is: /tmp/RtmpIKnbM5</span></div><div class='output co'>#&gt; <span class='message'>Copying references.bib and apa.csl to report directory ...</span></div><div class='output co'>#&gt; <span class='message'>Saving model object to report_res.rdata ...</span></div><div class='output co'>#&gt; <span class='message'>Creating report_res.rmd file ...</span></div><div class='output co'>#&gt; <span class='message'>Rendering report_res.rmd file ...</span></div><div class='output co'>#&gt; <span class='message'>Generated /tmp/RtmpIKnbM5/report_res.html ...</span></div><div class='output co'>#&gt; <span class='message'>Opening report ...</span></div></pre>
   </div>
   <div class="col-md-3 hidden-xs hidden-sm" id="pkgdown-sidebar">
     <nav id="toc" data-toggle="toc" class="sticky-top">
